welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:17: error: type mismatch;
 found   : Unit
 required: Int
      return
      ^max2Value:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i<- 1 to nums.length-1){
        ^